--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "react": "^15.3.2"
   }
 }
