--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.9
 django-bower==5.2.0
 django-require==1.0.11
 gunicorn==19.6.0
-pyjade==4.0.0
+Jinja2==2.8
+MarkupSafe==0.23
 six==1.10.0
 whitenoise==3.2.2
