--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+defusedxml==0.4.1
 Django==1.9
 django-bower==5.2.0
 django-require==1.0.11
 gunicorn==19.6.0
 Jinja2==2.8
 MarkupSafe==0.23
+oauthlib==2.0.0
+PyJWT==1.4.2
+python-social-auth==0.2.21
+python3-openid==3.0.10
+requests==2.11.1
+requests-oauthlib==0.7.0
 six==1.10.0
 whitenoise==3.2.2
